Bug #13710 Test case 'innodb' fails on checksum tests
Submitted: 3 Oct 2005 11:41 Modified: 4 Oct 2005 15:05
Reporter: Kent Boortz Email Updates:
Status: Closed
Category:Server: InnoDB Severity:S1 (Critical)
Version:5.0.14-pre OS:Any (All)
Assigned to: Sergei Golubchik Target Version:

[3 Oct 2005 11:41] Kent Boortz
Description:
The checksum test in 'innodb' fails, and not always giving the
same incorrect checksum. Mostly when 127268899 is expected,
the incorrect checksum is the same in the two places it is expected,
but FreeBSD with LinuxThreads shows the interesting result

-------------------------------------------------------
*** r/innodb.result
--- r/innodb.reject
***************
*** 2625,2635
  insert into t1 values(3);
  checksum table t1;
  Table Checksum
! test.t1       2605035534
  commit;
  checksum table t1;
  Table Checksum
! test.t1       127268899
  commit;
  drop table t1;
  create table t1(a int not null) engine=innodb DEFAULT CHARSET=latin1;
--- 2625,2635
  insert into t1 values(3);
  checksum table t1;
  Table Checksum
! test.t1       1531596814
  commit;
  checksum table t1;
  Table Checksum
! test.t1       2050879373
  commit;
  drop table t1;
  create table t1(a int not null) engine=innodb DEFAULT CHARSET=latin1;
***************
*** 2642,2648
  insert into t1 values(3);
  checksum table t1;
  Table Checksum
! test.t1       127268899
  drop table t1;
  create table t1 (col1 integer primary key, col2 integer) engine=innodb;
  insert t1 values (1,100);
--- 2642,2648
  insert into t1 values(3);
  checksum table t1;
  Table Checksum
! test.t1       3404446094
  drop table t1;
  create table t1 (col1 integer primary key, col2 integer) engine=innodb;
  insert t1 values (1,100);
-------------------------------------------------------

How to repeat:
Run the test case 'innodb' on the latest snap for 5.0.14-pre, 2005-10-02.
[4 Oct 2005 15:05] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/30686
[5 Oct 2005 17:36] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/30723