sql_table.cc, table.cc, table.h:   fixed CHECKSUM TABLE to be independent from last - undefined in InnoDB - bits in the null bitmask   bug#13710